src/css/leave-application.css
.leave-application {
  padding: 40px 0;
}

@media only screen and (min-width: 768px) {
  .leave-application {
    padding: 50px 0;
  }
}

@media only screen and (min-width: 1280px) {
  .leave-application {
    padding: 75px 0;
  }
}

.leave-application-heading {
  margin-bottom: 20px;
}

@media only screen and (min-width: 1280px) {
  .leave-application-heading {
    margin-bottom: 64px;
  }
}

.leave-application-heading-title {
  margin-bottom: 14px;

  color: var(--black);
  text-align: center;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.12;
  letter-spacing: -0.02em;
}

@media only screen and (min-width: 768px) {
  .leave-application-heading-title {
    margin-bottom: 16px;
  }
}

.leave-application-heading-title.with-accent {
  display: none;
}

@media only screen and (min-width: 768px) {
  .leave-application-heading-title {
    font-size: 40px;
    font-weight: 700;
    line-height: 1.2;
  }

  .leave-application-heading-title.clean {
    display: none;
  }

  .leave-application-heading-title.with-accent {
    display: block;
  }
}

.leave-application-heading-text {
  color: var(--soft-black);
  text-align: center;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.71;

  margin: 0 auto;
}

@media only screen and (min-width: 768px) {
  .leave-application-heading-text {
    max-width: 586px;

    font-size: 18px;
    line-height: 1.67;
  }
}

@media only screen and (min-width: 1280px) {
  .leave-application-heading-text {
    max-width: 709px;
  }
}

.leave-application-content {
  display: flex;
  gap: 32px;
}

.leave-application-image-card {
  position: relative;

  display: flex;
  flex-direction: column;
  align-items: center;
  width: 492px;
  height: 578px;

  background-color: var(--green);
  border-radius: 30px;
}

@media only screen and (max-width: 1279px) {
  .leave-application-image-card {
    display: none;
  }
}

.leave-application-image {
  margin-bottom: 20px;
  border-radius: 30px;
}
.leave-application-image-card-heading {
  margin-bottom: 8px;

  color: var(--white);
  text-align: center;
  font-size: 40px;
  font-style: normal;
  font-weight: 700;
  line-height: 1.2;
  letter-spacing: -0.02em;
}
.leave-application-image-card-text {
  width: 452px;

  color: rgba(255, 255, 255, 0.7);
  text-align: center;
  font-size: 16px;
  line-height: 1.5;
}
.leave-application-form {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
}

.leave-application-form-field:not(:last-child) {
  margin-bottom: 18px;
}

.leave-application-form-text-fields {
  margin-bottom: 20px;
}

@media only screen and (min-width: 1280px) {
  .leave-application-form-text-fields {
    margin-bottom: 32px;
  }
}

.leave-application-form-input {
  display: block;
  width: 100%;

  padding: 16px 18px;

  border-radius: 12px;
  border: 1px solid var(--soft-black);
  outline: none;

  color: var(--black);
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.28;

  transition: border var(--animation-fast);
}

@media only screen and (min-width: 768px) {
  .leave-application-form-input {
    font-size: 16px;
    line-height: 1.5;
  }
}

.leave-application-form-input:focus,
.leave-application-form-comment:focus {
  border-color: var(--green);
}

.leave-application-form-input:not(:placeholder-shown):invalid {
  border-color: var(--red);
}

.leave-application-form-comment {
  display: block;
  width: 100%;
  min-height: 94px;

  padding: 16px 18px;

  border-radius: 12px;
  border: 1px solid var(--soft-black);
  outline: none;

  resize: none;
}

.leave-application-form-comment:not(:placeholder-shown):invalid {
  border-color: var(--red);
}

.leave-application-form-field-teachers {
  margin-bottom: 40px;
}

@media only screen and (min-width: 768px) {
  .leave-application-form-field-teachers {
    margin-bottom: 34px;
  }
}

@media only screen and (min-width: 1280px) {
  .leave-application-form-field-teachers {
    margin-bottom: 32px;
  }
}

.leave-application-radio-heading {
  display: block;
  margin-bottom: 14px;

  color: var(--black);
  font-size: 18px;
  font-weight: 600;
  line-height: 1.33;
  letter-spacing: -0.02em;
}

@media only screen and (min-width: 768px) {
  .leave-application-radio-heading {
    font-size: 20px;
    line-height: 1.2;
    margin-bottom: 16px;
  }
}

.leave-application-form-teachers {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: baseline;
  gap: 8px;
}

@media only screen and (min-width: 768px) {
  .leave-application-form-teachers {
    flex-direction: row;
    gap: 16px;
  }
}

.leave-application-form-radio-element {
  color: var(--black);
  font-size: 14px;
  font-weight: 400;
  line-height: 1.71;
  letter-spacing: -0.02em;
}

@media only screen and (min-width: 768px) {
  .leave-application-form-radio-element {
    font-size: 18px;
    line-height: 1.33;
  }
}

.leave-application-form-radio-label {
  display: flex;
  align-items: center;
  gap: 9px;
  cursor: pointer;
}

@media only screen and (min-width: 768px) {
  .leave-application-form-radio-label {
    gap: 8px;
  }
}

.leave-application-form-radio-wrapper {
  width: 20px;
  height: 20px;

  cursor: pointer;

  display: flex;
  justify-content: center;
  align-items: center;
}

@media only screen and (min-width: 768px) {
  .leave-application-form-radio-wrapper {
    width: 24px;
    height: 24px;
  }
}

.leave-application-form-radio {
  display: inline-flex;
  justify-content: center;
  align-items: center;

  width: 18px;
  height: 18px;

  border-radius: 50%;
  border: 2px solid var(--soft-black);

  fill: transparent;

  transition:
    fill var(--animation-fast),
    border var(--animation-fast);
}

.leave-application-form-radio-label:hover .leave-application-form-radio,
.leave-application-form-radio-label:focus .leave-application-form-radio {
  border-color: var(--black);
}

@media only screen and (min-width: 768px) {
  .leave-application-form-radio {
    width: 20px;
    height: 20px;
  }
}

input[type='radio']:checked
  + .leave-application-form-radio-label
  .leave-application-form-radio {
  fill: var(--green);
  border-color: var(--green);
}

input[type='radio']:checked
  + .leave-application-form-radio-label:hover
  .leave-application-form-radio,
input[type='radio']:checked
  + .leave-application-form-radio-label:focus
  .leave-application-form-radio {
  border-color: var(--pressed-green);
}

.leave-application-form-submit-button {
  margin-bottom: 16px;
}

.leave-application-form-agreement-text {
  color: var(--soft-black);
  font-size: 12px;
  line-height: 1.33;
  font-weight: 400;
}

@media only screen and (min-width: 768px) {
  .leave-application-form-agreement-text {
    font-size: 14px;
    line-height: 1.71;
  }
}

.leave-application-form-link {
  text-decoration: underline;
  transition: color var(--animation-fast);
}

.leave-application-form-link:hover,
.leave-application-form-link:focus {
  color: var(--black);
}

